Update facebook bottom link

--- a/theme.html
+++ b/theme.html
@@ -75,7 +75,7 @@ _____________________________________________
     <meta name="text:Tumblr Username" content="USER" /> <!--Needed for ask/submit to work-->
     <meta name='text:Disqus Shortname' content='' />
 
-    <meta name="text:Username  " content="Facebook"/>
+    <meta name="text:Username on Facebook " content="Facebook"/>
     <meta name="text:Google Plus Url" content="Google"/>
     <meta name="text:Username on Twitter" content="Twitter"/>
     <meta name="text:Username on YouTube" content="YouTube"/>
@@ -1642,7 +1642,7 @@ a:hover{color:{color:Main Color};}
     <ul>
       {block:IfUsernameOnFacebook}
         <li>
-          <a target="_blank" href="http://www.facebook.com/{text:Username  }" id="facebook"><i class="fa fa-facebook-square"></i></a>
+          <a target="_blank" href="http://www.facebook.com/{text:Username on Facebook}" id="facebook"><i class="fa fa-facebook-square"></i></a>
         </li>
       {/block:IfUsernameOnFacebook}
 
