--- a/theme.html
+++ b/theme.html
@@ -1715,9 +1715,10 @@ a:hover{color:{color:Main Color};}
   <div id="bottomLinks">
     <a href="{BlogURL}">Home</a>
     <a href="/archive">Archive</a>
-    {block:AskEnabled}
-      <a onclick="askOn()" id="askButton" href="#asksubmit">{AskLabel}</a>
-    {/block:AskEnabled}
+    <a href="/ask">Archive</a>
+    <!--{block:AskEnabled}-->
+    <!--  <a onclick="askOn()" id="askButton" href="#asksubmit">{AskLabel}</a>-->
+    <!--{/block:AskEnabled}-->
     {block:SubmissionsEnabled}
       <a onclick="submitOn()" id="submitButton" href="#asksubmit">{SubmitLabel}</a>
     {/block:SubmissionsEnabled}
