--- a/theme.html
+++ b/theme.html
@@ -72,7 +72,6 @@ _____________________________________________
 
     <!--Text-->
     <meta name="text:Email" content="Email"/>
-    <meta name="text:Tumblr Username" content="USER" /> <!--Needed for ask/submit to work-->
     <meta name='text:Disqus Shortname' content='' />
 
     <meta name="text:Facebook URL" content="www.Facebook.com"/>
@@ -1730,6 +1729,9 @@ a:hover{color:{color:Main Color};}
   <div id="bottomBlurb">
     <p class="powered">
       <a href="https://www.tumblr.com/theme/38875">Paper</a> theme built by <a href="https://twitter.com/thomaskimura_">Thomas</a>
+    </p>
+    <p class="powered">
+      This is a free theme, help support it by purchasing some cool <a href="https://www.etsy.com/ca/shop/MyEmojiLife">art</a>
     </p>
   </div>
 
