Update style - show tumblr controls

--- a/theme.html
+++ b/theme.html
@@ -9,10 +9,10 @@ _____________________________________________
 _____________________________________________
 _____________________________________________
 
-Version 2.20
+Version 3.00
 _____________________________________________
 
-Paper theme created by: @thomaskimura_
+Paper theme created by: @tommymandude
 _____________________________________________
 
 Demo: papertheme.tumblr.com/
@@ -107,7 +107,7 @@ _____________________________________________
     <meta name="if:Fade On" content="0"/>
 
     <!--Stylesheets-->
-    <link href="http://static.tumblr.com/9hupah0/lYbnhp10k/style.min.css" rel="stylesheet">
+    <link href="http://static.tumblr.com/9hupah0/YBWntep0m/style.min.css" rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
 <style>
