--- a/theme.html
+++ b/theme.html
@@ -115,6 +115,15 @@ _____________________________________________
 /*---OPTIONS---*/
 /*-------------*/
 
+.support-it {
+  color: #9CB1DE;
+  background-color: #E9E4F6;
+  margin: 0 auto;
+  padding: 5px;
+  width:90%;
+  max-width: 400px;
+  border-radius: 5px;
+}
 /*--Column Width--*/
 .postHead{max-width:{text:Column Size}px;}
 .row{max-width:{text:Column Size}px;}
@@ -1730,7 +1739,7 @@ a:hover{color:{color:Main Color};}
     <p class="powered">
       <a href="https://www.tumblr.com/theme/38875">Paper</a> theme built by <a href="https://twitter.com/thomaskimura_">Thomas</a>
     </p>
-    <p class="powered">
+    <p class="support-it">
       This is a free theme, help support it by purchasing some cool <a href="https://www.etsy.com/ca/shop/MyEmojiLife">art</a>
     </p>
   </div>
