updated twitter link

--- a/theme.html
+++ b/theme.html
@@ -12,7 +12,7 @@ _____________________________________________
 Version 3.00
 _____________________________________________
 
-Paper theme created by: @tommymandude
+Paper theme created by: @_tomki
 _____________________________________________
 
 Demo: papertheme.tumblr.com/
