--- a/theme.html
+++ b/theme.html
@@ -116,13 +116,13 @@ _____________________________________________
 /*-------------*/
 
 .support-it {
-  color: #9CB1DE;
-  background-color: #E9E4F6;
+  color: #bbb;
   margin: 0 auto;
   padding: 5px;
   width:90%;
   max-width: 400px;
   border-radius: 5px;
+  text-decoration:underline;
 }
 /*--Column Width--*/
 .postHead{max-width:{text:Column Size}px;}
