--- a/theme.html
+++ b/theme.html
@@ -1737,7 +1737,7 @@ a:hover{color:{color:Main Color};}
   <!--Blurb-->
   <div id="bottomBlurb">
     <p class="powered">
-      <a href="https://www.tumblr.com/theme/38875">Paper</a> theme built by <a href="https://twitter.com/_tomki">Thomas</a>
+      <a href="https://www.tumblr.com/theme/38875">Paper</a> theme built by <a href="http://kimuradigital.com/">Thomas</a>
     </p>
     <p class="support-it">
       This is a free theme, help support it by purchasing some cool <a href="https://www.etsy.com/ca/shop/MyEmojiLife">art</a>
