--- a/theme.html
+++ b/theme.html
@@ -1739,8 +1739,8 @@ a:hover{color:{color:Main Color};}
     <p class="powered">
       <a href="https://www.tumblr.com/theme/38875">Paper</a> theme built by <a href="http://kimuradigital.com/">Thomas</a>
     </p>
-    <p class="support-it">
-      This is a free theme, help support it by purchasing some cool <a href="https://www.etsy.com/ca/shop/MyEmojiLife">art</a>
+    <p class="support-it" style="background: #FAFAF8;">
+      This is a free theme, help support it by <a href="http://shopdumb.com/">shopping for dumb stuff</a>.
     </p>
   </div>
 
