--- a/theme.html
+++ b/theme.html
@@ -1740,7 +1740,7 @@ a:hover{color:{color:Main Color};}
       <a href="https://www.tumblr.com/theme/38875">Paper</a> theme built by <a href="http://kimuradigital.com/">Thomas</a>
     </p>
     <p class="support-it" style="background: #FAFAF8;">
-      This is a free theme, help support it by <a href="http://shopdumb.com/">shopping for dumb stuff</a>.
+      This is a free theme, help support it by <a href="https://herenotthere.ca//">buying a tshirt</a>.
     </p>
   </div>
 
