--- a/theme.html
+++ b/theme.html
@@ -12,7 +12,7 @@ _____________________________________________
 Version 3.00
 _____________________________________________
 
-Paper theme created by: @_tomki
+Paper theme created by: @brickspacelab
 _____________________________________________
 
 Demo: papertheme.tumblr.com/
@@ -1737,7 +1737,7 @@ a:hover{color:{color:Main Color};}
   <!--Blurb-->
   <div id="bottomBlurb">
     <p class="powered">
-      <a href="https://www.tumblr.com/theme/38875">Paper</a> theme built by <a href="http://kimuradigital.com/">Thomas</a>
+      <a href="https://www.tumblr.com/theme/38875">Paper</a> theme built by <a href="https://brickspacelab.com/">Brickspace Lab</a>
     </p>
   </div>
 
